--- a/MS-ReceptionMenuOptions.html
+++ b/MS-ReceptionMenuOptions.html
@@ -177,8 +177,8 @@
     "Indian Main Course · Select 3": "Select 3",
 
     "Oriental Main Course – Rice / Noodles": "Select 1",
-    "Oriental Main Course – Gravies": "Select 1",
-    "Oriental Main Course – Thai": "Optional (only if hotel agrees)"
+    "Oriental Main Course – Gravies": "Select 1"
+
   };
 
   // Rows: group is what appears in Category column (with rowSpan)
@@ -236,17 +236,16 @@
     { group:"Indian Main Course · Select 3", dish:"Dum Aloo Banarasi", lko:true, score:4.6 },
     { group:"Indian Main Course · Select 3", dish:"Subi Lahori", lko:true, score:4.4 },
 
-    // Oriental mains: split as requested
-    { group:"Oriental Main Course – Rice / Noodles", dish:"Vegetable Hakka Noodles", score:4.6 },
-    { group:"Oriental Main Course – Rice / Noodles", dish:"Burnt Garlic Fried Rice", score:4.6 },
-    { group:"Oriental Main Course – Rice / Noodles", dish:"Jasmine / Steamed Rice", score:4.4 },
+    // Oriental mains (Thai folded into Gravies)
+{ group:"Oriental Main Course – Rice / Noodles", dish:"Vegetable Hakka Noodles", score:4.6 },
+{ group:"Oriental Main Course – Rice / Noodles", dish:"Burnt Garlic Fried Rice", score:4.6 },
+{ group:"Oriental Main Course – Rice / Noodles", dish:"Jasmine / Steamed Rice (Thai)", score:4.4 },
 
-    { group:"Oriental Main Course – Gravies", dish:"Paneer Chilli Gravy", score:4.7 },
-    { group:"Oriental Main Course – Gravies", dish:"Veg Manchurian Gravy", score:4.6 },
+{ group:"Oriental Main Course – Gravies", dish:"Paneer Chilli Gravy", score:4.7 },
+{ group:"Oriental Main Course – Gravies", dish:"Veg Manchurian Gravy", score:4.6 },
+{ group:"Oriental Main Course – Gravies", dish:"Thai Basil Tofu / Vegetables", score:4.5 },
+{ group:"Oriental Main Course – Gravies", dish:"Thai Green Curry", score:4.6 },
 
-    { group:"Oriental Main Course – Thai", dish:"Thai Basil Tofu / Vegetables", score:4.5 },
-    { group:"Oriental Main Course – Thai", dish:"Thai Green Curry", score:4.6 },
-    { group:"Oriental Main Course – Thai", dish:"Thai Red Curry", score:4.5 },
 
     // Remaining (kept simple)
     { group:"Lentil · Select 1", dish:"Dal Makhani", score:4.9 },
